test/resources/nameAnalyzer/failing/DuplicateLocals.amy
object Locals
  def foo(): Int(32) :=
    val i: Int(32) = 42;
    val i: Boolean = true;
    43
  end foo
end Locals
